--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
-<p>Address:</p>
+<p>Tel: +91 8247487457</p>
+<p>Email: themedabalimi2000@gmail.com</p>
+<p>Address:2-88/2 kanaparru, narasraopet</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  123 swaroop anna Street<br />
+  vijayawada City<br />
+  india Country <br />
 </p>
