--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
     <h2>projects links:</h2>
         <p><ol><li><a href="https://github.com/Lourdhu-karthik/web-development-portfolio/blob/main/index.html">github</a></li>
-                <li><a href="https://www.youtube.com/">my youtube channel</a></li>
+                <li><a href="https://www.youtube.com/@daydreamer5795">my youtube channel</a></li>
                 <li><a href="https://www.carTHICK.com/">website</a></li>
             </ol>
         </p>
